# opengemini-client-rust

./: .gitignore  Cargo.toml  README.md  README_CN.md
.github/workflows/: line_lint.yml  pr_title_lint.yml  rust_clippy.yml  rust_fmt.yml  rust_unit_test.yml
src/: config.rs  error.rs  lib.rs  opengemini_client.rs  point.rs  url_const.rs
src/models/: colval.rs  feild.rs  mod.rs  record.rs
