[package]
name = "opengemini"
version = "0.0.1"
edition = "2021"
description = "Rust client for OpenGemini"
license = "Apache-2.0"
repository = "https://github.com/openGemini/opengemini-client-rust"
homepage = "https://github.com/openGemini/opengemini-client-rust"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "__rustls"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
