# Copyright 2024 openGemini Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "opengemini"
version = "0.0.1"
edition = "2021"
description = "Rust client for OpenGemini"
license = "Apache-2.0"
repository = "https://github.com/openGemini/opengemini-client-rust"
homepage = "https://github.com/openGemini/opengemini-client-rust"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "__rustls", "blocking", "gzip"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.64"
tokio = "1.40.0"
zigzag = "0.1.0"
